# cdn

./: README.md  main.py  requirements.txt  server.py
assets/: index.html
brrycdn-cli/: README.md  pyproject.toml
brrycdn-cli/brrycdn_cli/: main.py
brrycdn-cli/tests/: test_brrycdn_cli.py
tools/: hashing.py  setup.py
