[tool.poetry]
name = "brrycdn-cli"
version = "0.2.0"
description = "A CLI to access the brry CDN"
authors = ["berrysauce <contact@berrysauce.me>"]
readme = "README.md"

[tool.poetry.scripts]
brrycdn-cli = "brrycdn_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
